--- a/src/styles/syntax.css
+++ b/src/styles/syntax.css
@@ -90,12 +90,34 @@ pre[class*="language-"] {
 .token.tag,
 .token.operator,
 .token.number {
-  color: #ea7a2a;
+  color: #f5934d;
 }
 
-.token.property,
-.token.function {
-  color: #278416;
+.dark .token.tag,
+.dark .token.operator,
+.dark .token.number {
+  color: #f5934d;
+}
+
+.light .token .attr-name,
+.light .token.property,
+.light .token.function {
+  color: #24770d;
+}
+
+.light .token.number,
+.light .token.class-name,
+.light .token.tag {
+  color: #843a06;
+}
+
+.light .token.punctuation {
+  color: #535046;
+}
+
+.dark .token.property,
+.dark .token.function {
+  color: #3ac421;
 }
 
 .token.tag-id,
@@ -106,7 +128,7 @@ pre[class*="language-"] {
 
 code.language-javascript,
 .token.attr-name {
-  color: #278416;
+  color: #3ac421;
 }
 
 code.language-css,
@@ -126,7 +148,13 @@ code.language-scss,
 .token.statement,
 .token.regex,
 .token.atrule {
-  color: #005cc5;
+  color: #cf94ff;
+}
+
+.light .token.attr-value,
+.light .token.string,
+.light .token.keyword {
+  color: #6800bd;
 }
 
 .token.placeholder,
@@ -153,7 +181,7 @@ code.language-scss,
 }
 
 .token.important {
-  color: #278416;
+  color: #3ac421;
 }
 
 .token.entity {
@@ -161,7 +189,7 @@ code.language-scss,
 }
 
 pre > code.highlight {
-  outline: 0.4em solid #278416;
+  outline: 0.4em solid #3ac421;
   outline-offset: 0.4em;
 }
 
