--- a/src/styles/index.css
+++ b/src/styles/index.css
@@ -14,7 +14,7 @@ input:-webkit-autofill,
 input:-webkit-autofill:hover,
 input:-webkit-autofill:focus,
 input:-webkit-autofill:active {
-  -webkit-box-shadow: 0 0 0 30px #fff inset !important;
+  -webkit-box-shadow: 0 0 0 30px #f8f8f8 inset !important;
   height: auto;
 }
 
